fixing logo alignment issue

--- a/css/site.less
+++ b/css/site.less
@@ -447,6 +447,10 @@ article {
                             display:flex;
                         }
 
+                        .text-container {
+                            flex-grow: 1;
+                        }
+
                         margin-left: unset;
                     }
 
